# GWLENS

./: LICENSE  README.md  interpolator.py  lens.py  microlensing.py  nfw.py  parameters.ini  pyproject.toml  requirements.txt  test.ipynb  utilities.py
gwlens/: __init__.py
gwlens.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
gwlens/lens/: microlensing.py  nfw.py  nfw_old.py  nfwparallel.py  point.py  pointparallel.py  powerlaw.py  sis.py
gwlens/lens/.ipynb_checkpoints/: sis-checkpoint.py
gwlens/pe/: priors.py  waveform.py
gwlens/tools/: __init__.py  executor.py  generate_ini.py  interpolator.py  utilities.py
mini-halo/notebooks/: halo.ipynb
mini-halo/notebooks/.ipynb_checkpoints/: halo-checkpoint.ipynb
tests/: ampfac.txt  nfw_mpmath_version_test.ipynb  nfw_output.txt  nfw_output_rs3.txt  parameters.ini  plot.py  powerlaw_mpmath.ipynb  sis.ipynb  sis_y01.txt  siscore_b01_y01.txt  siscore_b04_y01.txt  siscore_b04_y03.txt  siscore_b04_y2.txt  w_amplification.txt  wamplification.txt
tests/.ipynb_checkpoints/: mpmath_v2-checkpoint.ipynb  powerlawtest-checkpoint.ipynb
tests/microlensin/: parameters.ini
tests/microlensin/outdir/: dimensionless_frequency.txt  point_lens_amplification_factor_imag.txt  point_lens_amplification_factor_real.txt  source_position.txt
tests/nfw/: parameters.ini  testnfw.ipynb
tests/outdir/: test.ipynb
tests/outdir/.ipynb_checkpoints/: test-checkpoint.ipynb
tests/outdir/interpolation/: nfw.hdf5  nfw_amplification.hdf5  nfw_max_amplification.hdf5  result.hdf5
tests/pe/: petest.ipynb
(+4 files in other folders)
